Better variable and method names, finish fixing TODOs

--- a/sampler/Examples.ipynb
+++ b/sampler/Examples.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:de2cba94eff7d1142e24a7fbefb625f4e75d8936867949c217de60314bc5f95b"
+  "signature": "sha256:842cf912d41b8bb8bffac4d2063197feec4bd58e4e9c43e09d059e77f5060696"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -157,7 +157,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "item_dist.logpmf(item)"
+      "item_dist.log_pmf(item)"
      ],
      "language": "python",
      "metadata": {},
