Change name to 500L

--- a/tex/500L.template.tex
+++ b/tex/500L.template.tex
@@ -258,12 +258,12 @@
 \mainmatter
 
 
-\include{template-engine}
+chapterchapterchapter
 
 
 \bibliographystyle{alpha}
 
-\bibliography{posa}
+\bibliography{500L}
 
 \makeatletter
 \@openrightfalse
