--- a/tex/500L.tex
+++ b/tex/500L.tex
@@ -258,12 +258,12 @@
 \mainmatter
 
 
-chapterchapterchapter
+\include{template-engine}
 
 
 \bibliographystyle{alpha}
 
-\bibliography{posa}
+\bibliography{500L}
 
 \makeatletter
 \@openrightfalse
