--- a/tex/template-engine.tex
+++ b/tex/template-engine.tex
@@ -1,6 +1,4 @@
-\begin{aosachapter}{}{s:template-engine}{}
-
-\chapter{A Template Engine}\label{a-template-engine}
+\begin{aosachapter}{A Template Engine}{s:template-engine}{Ned Batchelder}
 
 Most programs contain a lot of logic, and a little bit of literal
 textual data. Programming languages are designed to be good for this
