--- a/tex/500L.template.tex
+++ b/tex/500L.template.tex
@@ -136,7 +136,7 @@
 \widowpenalty=600
 \clubpenalty=600
 
-\title{The Performance of Open Source Applications}
+\title{500 Lines or Less}
 \date{}
 
 \newcommand{\chapterauthor}{}
