--- a/tex/500L.template.tex
+++ b/tex/500L.template.tex
@@ -11,6 +11,7 @@
 %% PANDOC SYNTAX HIGHLIGHTING
 \usepackage{fixltx2e} % provides \textsubscript
 \usepackage[utf8]{inputenc}
+\usepackage{amsmath} % bmatrix
 % use microtype if available
 \IfFileExists{microtype.sty}{\usepackage{microtype}}{}
 %\usepackage{color}
