HTML everything except the matrices.

--- a/tex/modeller.tex
+++ b/tex/modeller.tex
@@ -507,11 +507,7 @@ contains other nodes. It manages a list of ``children''. The
 scene. Now, defining the snow figure is as simple as specifying the
 shapes that comprise it, and their relative positions and sizes.
 
-\begin{figure}[htbp]
-\centering
-\includegraphics{nodes.jpg?raw=true}
-\caption{The hierarchy of \texttt{Node} subclasses.}
-\end{figure}
+\aosafigure[240pt]{modeller-images/nodes.jpg}{Hierarchy of `Node` subclasses}{500l.modeller.hierarchy}
 
 \begin{verbatim}
 class HierarchicalNode(Node):
